--- a/Hyppypotku/pom.xml
+++ b/Hyppypotku/pom.xml
@@ -67,7 +67,7 @@
                             <shadedClassifierName>launcher</shadedClassifierName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Hyppypotku.hyppypotku.hyppypotku.Main</mainClass>
+                                    <mainClass>hyppypotku.hyppypotku.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
